--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <groupId>tribes</groupId>
   <artifactId>forest</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
 
   <name>forest</name>
   <!-- FIXME change it to the project's website -->
